feat: add backgroundservice for re-publishing events as mqtt messages

--- a/src/LupusBytes.CS2.GameStateIntegration.Api/appsettings.Development.json
+++ b/src/LupusBytes.CS2.GameStateIntegration.Api/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Mqtt": {
+    "Host": "mqtt.example.com",
+    "Port": 1883,
+    "UseTls": false
   }
 }
