--- a/src/LupusBytes.CS2.GameStateIntegration.Api/LupusBytes.CS2.GameStateIntegration.Api.csproj
+++ b/src/LupusBytes.CS2.GameStateIntegration.Api/LupusBytes.CS2.GameStateIntegration.Api.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\LupusBytes.CS2.GameStateIntegration.Api.Extensions\LupusBytes.CS2.GameStateIntegration.Api.Extensions.csproj" />
+      <ProjectReference Include="..\LupusBytes.CS2.GameStateIntegration.Api.Endpoints\LupusBytes.CS2.GameStateIntegration.Api.Endpoints.csproj" />
       <ProjectReference Include="..\LupusBytes.CS2.GameStateIntegration.Contracts\LupusBytes.CS2.GameStateIntegration.Contracts.csproj" />
       <ProjectReference Include="..\LupusBytes.CS2.GameStateIntegration.Mqtt\LupusBytes.CS2.GameStateIntegration.Mqtt.csproj" />
       <ProjectReference Include="..\LupusBytes.CS2.GameStateIntegration\LupusBytes.CS2.GameStateIntegration.csproj" />
