--- a/src/LupusBytes.CS2.GameStateIntegration/LupusBytes.CS2.GameStateIntegration.csproj
+++ b/src/LupusBytes.CS2.GameStateIntegration/LupusBytes.CS2.GameStateIntegration.csproj
@@ -11,4 +11,8 @@
       <ProjectReference Include="..\LupusBytes.CS2.GameStateIntegration.Contracts\LupusBytes.CS2.GameStateIntegration.Contracts.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
+    </ItemGroup>
+
 </Project>
