test: add appsettings.Test.json to api tests for later use

--- a/test/LupusBytes.CS2.GameStateIntegration.Api.Tests/LupusBytes.CS2.GameStateIntegration.Api.Tests.csproj
+++ b/test/LupusBytes.CS2.GameStateIntegration.Api.Tests/LupusBytes.CS2.GameStateIntegration.Api.Tests.csproj
@@ -35,4 +35,10 @@
       </Reference>
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="appsettings.Test.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
