chore: correct repository name

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -3,7 +3,7 @@
 
   <PropertyGroup Label="Metadata configuration">
     <OrganizationName>lupusbytes</OrganizationName>
-    <RepositoryName>cs2-gamestate-integration</RepositoryName>
+    <RepositoryName>cs2mqtt</RepositoryName>
   </PropertyGroup>
 
   <!-- Solution wide properties -->
