--- a/src/LupusBytes.CS2.GameStateIntegration/LupusBytes.CS2.GameStateIntegration.csproj
+++ b/src/LupusBytes.CS2.GameStateIntegration/LupusBytes.CS2.GameStateIntegration.csproj
@@ -12,6 +12,8 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.2" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
     </ItemGroup>
 
