test: end-to-end test api endpoints

--- a/test/LupusBytes.CS2.GameStateIntegration.Api.EndToEnd.Tests/LupusBytes.CS2.GameStateIntegration.Api.EndToEnd.Tests.csproj
+++ b/test/LupusBytes.CS2.GameStateIntegration.Api.EndToEnd.Tests/LupusBytes.CS2.GameStateIntegration.Api.EndToEnd.Tests.csproj
@@ -14,13 +14,14 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\src\LupusBytes.CS2.GameStateIntegration.Api\LupusBytes.CS2.GameStateIntegration.Api.csproj" />
+      <None Update="appsettings.EndToEnd.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
-      <None Update="appsettings.Test.json">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </None>
+      <ProjectReference Include="..\..\src\LupusBytes.CS2.GameStateIntegration.Api\LupusBytes.CS2.GameStateIntegration.Api.csproj" />
+      <ProjectReference Include="..\..\src\LupusBytes.CS2.GameStateIntegration.Mqtt\LupusBytes.CS2.GameStateIntegration.Mqtt.csproj" />
     </ItemGroup>
 
 </Project>
