--- a/src/LupusBytes.CS2.GameStateIntegration.Mqtt/LupusBytes.CS2.GameStateIntegration.Mqtt.csproj
+++ b/src/LupusBytes.CS2.GameStateIntegration.Mqtt/LupusBytes.CS2.GameStateIntegration.Mqtt.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
@@ -9,6 +9,7 @@
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
       <PackageReference Include="MQTTnet" Version="4.3.6.1152" />
+      <PackageReference Include="Polly" Version="8.4.1" />
     </ItemGroup>
 
     <ItemGroup>
