feat(homeassistant): use assembly version for mqtt device sw version
The HomeAssistant MQTT device discovery protocol enables you to specify the firmware version the device is using. It is logical for this version to match our cs2mqtt version.

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -7,11 +7,9 @@
   </PropertyGroup>
 
   <!-- Solution wide properties -->
-  <PropertyGroup Label="Assembly Naming">
-    <Company>$(OrganizationName)</Company>
-    <Authors>$(OrganizationName)</Authors>
-    <NeutralLanguage>en</NeutralLanguage>
-    <DefaultLanguage>en-US</DefaultLanguage>
+  <PropertyGroup Label="Versioning">
+    <Version>1.0.0</Version>
+    <IncludeSourceRevisionInInformationalVersion>true</IncludeSourceRevisionInInformationalVersion>
   </PropertyGroup>
 
   <PropertyGroup Label="Compile settings">
