--- a/test/LupusBytes.CS2.GameStateIntegration.Mqtt.Integration.Tests/LupusBytes.CS2.GameStateIntegration.Mqtt.Integration.Tests.csproj
+++ b/test/LupusBytes.CS2.GameStateIntegration.Mqtt.Integration.Tests/LupusBytes.CS2.GameStateIntegration.Mqtt.Integration.Tests.csproj
@@ -10,7 +10,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="MQTTnet" Version="4.3.7.1207" />
+        <PackageReference Include="MQTTnet" Version="5.0.0.1405" />
+        <PackageReference Include="MQTTnet.Server" Version="5.0.0.1405" />
     </ItemGroup>
 
     <ItemGroup>
