ci: create seperate changelog sections for dependency updates
this commit also customizes the section titles relating to feat and fix conventional commit message prefixes

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -9,5 +9,28 @@
   },
   "extra-files": [
     "Directory.Build.props"
+  ],
+  "changelog-sections": [
+    {
+      "type": "feat",
+      "section": "New features"
+    },
+    {
+      "type": "fix",
+      "scope": "deps",
+      "section": "Upgrades"
+    },
+    {
+      "type": "fix",
+      "section": "Bug fixes"
+    },
+    {
+      "type": "perf",
+      "section": "Performance improvements"
+    },
+    {
+      "type": "revert",
+      "section": "Reverts"
+    }
   ]
 }
