--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -32,6 +32,11 @@ jobs:
     - name: 🛒 Checkout repository
       uses: actions/checkout@v4
 
+    - name: ⚙️ Setup .NET 9
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: '9.0.x'
+
     - name: 🧪 Test
       run: dotnet test -c Release -p:CollectCoverage=true -p:CoverletOutput=../ -p:MergeWith=../coverage.json -p:CoverletOutputFormat=\"opencover,json\" -m:1
 
