--- a/test/LupusBytes.CS2.GameStateIntegration.Api.EndToEnd.Tests/LupusBytes.CS2.GameStateIntegration.Api.EndToEnd.Tests.csproj
+++ b/test/LupusBytes.CS2.GameStateIntegration.Api.EndToEnd.Tests/LupusBytes.CS2.GameStateIntegration.Api.EndToEnd.Tests.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.9" />
+        <PackageReference Include="Xunit.v3.Priority" Version="1.1.18" />
     </ItemGroup>
 
     <ItemGroup>
