--- a/ha-addon/config.json
+++ b/ha-addon/config.json
@@ -24,7 +24,7 @@
     "MQTT__Username": "c2m",
     "MQTT__Password": "password",
     "MQTT__ClientId": "cs2mqtt",
-    "MQTT__ProtocolVersion": ["5.0.0", "3.1.1", "3.0.0"]
+    "MQTT__ProtocolVersion": "5.0.0"
   },
   "schema": {
     "MQTT__Host": "str",
@@ -33,7 +33,7 @@
     "MQTT__Username": "str?",
     "MQTT__Password": "str?",
     "MQTT__ClientId": "str?",
-    "MQTT__ProtocolVersion": "str?"
+    "MQTT__ProtocolVersion": "list(5.0.0|3.1.1|3.0.0)"
   },
   "image": "ghcr.io/lupusbytes/cs2mqtt"
 }
