--- a/ha-addon/config.json
+++ b/ha-addon/config.json
@@ -31,7 +31,7 @@
     "MQTT__Port": "int",
     "MQTT__UseTLS": "bool?",
     "MQTT__Username": "str?",
-    "MQTT__Password": "str?",
+    "MQTT__Password": "password?",
     "MQTT__ClientId": "str?",
     "MQTT__ProtocolVersion": "list(5.0.0|3.1.1|3.0.0)"
   },
