--- a/ha-addon/config.json
+++ b/ha-addon/config.json
@@ -18,7 +18,7 @@
     "8080/tcp": "Game State API port"
   },
   "options": {
-    "MQTT__Host": "127.0.0.1",
+    "MQTT__Host": "homeassistant.local",
     "MQTT__Port": "1883",
     "MQTT__UseTLS": false,
     "MQTT__Username": "c2m",
@@ -33,7 +33,7 @@
     "MQTT__Username": "str?",
     "MQTT__Password": "password?",
     "MQTT__ClientId": "str?",
-    "MQTT__ProtocolVersion": "list(5.0.0|3.1.1|3.0.0)"
+    "MQTT__ProtocolVersion": "list(5.0.0|3.1.1|3.1.0)"
   },
   "image": "ghcr.io/lupusbytes/cs2mqtt"
 }
