ci: control version in ha-addon/config.json with release-please

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -8,7 +8,12 @@
     }
   },
   "extra-files": [
-    "Directory.Build.props"
+    "Directory.Build.props",
+    {
+      "path": "ha-addon/config.json",
+      "type": "json",
+      "jsonpath": "$.version"
+    }
   ],
   "changelog-sections": [
     {
