--- a/test/LupusBytes.CS2.GameStateIntegration.Mqtt.Tests/LupusBytes.CS2.GameStateIntegration.Mqtt.Tests.csproj
+++ b/test/LupusBytes.CS2.GameStateIntegration.Mqtt.Tests/LupusBytes.CS2.GameStateIntegration.Mqtt.Tests.csproj
@@ -13,4 +13,8 @@
       <ProjectReference Include="..\..\src\LupusBytes.CS2.GameStateIntegration.Mqtt\LupusBytes.CS2.GameStateIntegration.Mqtt.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.9" />
+    </ItemGroup>
+
 </Project>
