--- a/src/LupusBytes.CS2.GameStateIntegration.Api/appsettings.json
+++ b/src/LupusBytes.CS2.GameStateIntegration.Api/appsettings.json
@@ -3,6 +3,12 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "Console": {
+      "FormatterName": "simple",
+      "FormatterOptions": {
+        "TimestampFormat": "[HH:mm:ss.fff] "
+      }
     }
   },
   "AllowedHosts": "*"
