feat(logging): log cs2 gsi api requests at debug level

--- a/src/LupusBytes.CS2.GameStateIntegration.Api/.editorconfig
+++ b/src/LupusBytes.CS2.GameStateIntegration.Api/.editorconfig
@@ -2,6 +2,6 @@
 # Code Analyzers Rules
 ##########################################
 [*.{cs,csx,cake}]
-dotnet_diagnostic.S1118.severity = none		# S1118: Utility classes should not have public constructors (needed for end to end tests)
-dotnet_diagnostic.CA1515.severity = none	# CA1515: Consider making public types internal (needed for end to end tests)
-
+dotnet_diagnostic.S1118.severity = none     # S1118: Utility classes should not have public constructors (needed for end to end tests)
+dotnet_diagnostic.CA1515.severity = none    # CA1515: Consider making public types internal (needed for end to end tests)
+dotnet_diagnostic.SA1601.severity = none    # SA1601: Partial elements should be documented (partial for source generated logging)
