--- a/ha-addon/config.json
+++ b/ha-addon/config.json
@@ -5,11 +5,6 @@
   "description": "Counter-Strike 2 Game State Integration to MQTT bridge",
   "url": "https://github.com/lupusbytes/cs2mqtt",
   "startup": "application",
-  "services": [
-    "mqtt:need"
-  ],
-  "hassio_api": true,
-  "panel_icon": "mdi:pistol",
   "arch": [
     "aarch64",
     "amd64"
@@ -23,6 +18,7 @@
     "8080/tcp": "Game State API port"
   },
   "options": {
+    "GameState__IgnoreSpectatedPlayers": true,
     "MQTT__Host": "homeassistant.local",
     "MQTT__Port": 1883,
     "MQTT__UseTLS": false,
@@ -32,13 +28,17 @@
     "MQTT__ProtocolVersion": "5.0.0"
   },
   "schema": {
+    "GameState__IgnoreSpectatedPlayers": "bool",
     "MQTT__Host": "str",
     "MQTT__Port": "int",
     "MQTT__UseTLS": "bool",
     "MQTT__Username": "str?",
     "MQTT__Password": "password?",
     "MQTT__ClientId": "str?",
-    "MQTT__ProtocolVersion": "list(5.0.0|3.1.1|3.1.0)"
+    "MQTT__ProtocolVersion": "list(5.0.0|3.1.1|3.1.0)",
+    "GameState__TimeoutInSeconds": "float?",
+    "GameState__TimeoutCleanupIntervalInSeconds": "float?",
+    "Logging__LogLevel__Default": "list(Debug|Information|Warning)?"
   },
   "image": "ghcr.io/lupusbytes/cs2mqtt"
 }
