--- a/ha-addon/config.json
+++ b/ha-addon/config.json
@@ -23,6 +23,7 @@
     "8080/tcp": "Game State API port"
   },
   "options": {
+    "GameState__IgnoreSpectatedPlayers": true,
     "MQTT__Host": "homeassistant.local",
     "MQTT__Port": 1883,
     "MQTT__UseTLS": false,
@@ -32,13 +33,17 @@
     "MQTT__ProtocolVersion": "5.0.0"
   },
   "schema": {
+    "GameState__IgnoreSpectatedPlayers": "bool",
     "MQTT__Host": "str",
     "MQTT__Port": "int",
     "MQTT__UseTLS": "bool",
     "MQTT__Username": "str?",
     "MQTT__Password": "password?",
     "MQTT__ClientId": "str?",
-    "MQTT__ProtocolVersion": "list(5.0.0|3.1.1|3.1.0)"
+    "MQTT__ProtocolVersion": "list(5.0.0|3.1.1|3.1.0)",
+    "GameState__TimeoutInSeconds": "float?",
+    "GameState__TimeoutCleanupIntervalInSeconds": "float?",
+    "Logging__LogLevel__Default": "list(Debug|Information|Warning)?"
   },
   "image": "ghcr.io/lupusbytes/cs2mqtt"
 }
