--- a/ha-addon/config.json
+++ b/ha-addon/config.json
@@ -1,9 +1,9 @@
 {
-  "name": "cs2mqtt",
-  "version": "1.7.0",
-  "slug": "cs2mqtt",
+  "name": "cs2mqtt-dev",
+  "version": "main",
+  "slug": "cs2mqtt-dev",
   "description": "Counter-Strike 2 Game State Integration to MQTT bridge",
-  "url": "https://github.com/lupusbytes/cs2mqtt",
+  "url": "https://github.com/davidramiro/cs2mqtt",
   "startup": "application",
   "services": [
     "mqtt:need"
@@ -23,22 +23,15 @@
     "8080/tcp": "Game State API port"
   },
   "options": {
-    "MQTT__Host": "homeassistant.local",
-    "MQTT__Port": 1883,
-    "MQTT__UseTLS": false,
-    "MQTT__Username": "",
-    "MQTT__Password": "",
-    "MQTT__ClientId": "",
-    "MQTT__ProtocolVersion": "5.0.0"
   },
   "schema": {
-    "MQTT__Host": "str",
-    "MQTT__Port": "int",
-    "MQTT__UseTLS": "bool",
+    "MQTT__Host": "str?",
+    "MQTT__Port": "int?",
+    "MQTT__UseTLS": "bool?",
     "MQTT__Username": "str?",
     "MQTT__Password": "password?",
     "MQTT__ClientId": "str?",
-    "MQTT__ProtocolVersion": "list(5.0.0|3.1.1|3.1.0)"
+    "MQTT__ProtocolVersion": "list(5.0.0|3.1.1|3.1.0)?"
   },
-  "image": "ghcr.io/lupusbytes/cs2mqtt"
+  "image": "ghcr.io/davidramiro/cs2mqtt"
 }
