ci: group mqttnet client and server dependency updates

--- a/renovate.json
+++ b/renovate.json
@@ -12,6 +12,10 @@
       "packagePatterns": ["*"],
       "matchFileNames": ["src/**"],
       "semanticCommitType": "fix"
+    },
+    {
+      "matchSourceUrls": ["https://github.com/dotnet/MQTTnet"],
+      "groupName": "mqttnet"
     }
   ]
 }
