test: make internals also visible to end-to-end and integration tests

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -9,5 +9,7 @@
   <ItemGroup>
     <!-- Makes internal types in libraries visible to their test projects -->
     <InternalsVisibleTo Include="$(AssemblyName).Tests" />
+    <InternalsVisibleTo Include="$(AssemblyName).EndToEnd.Tests" />
+    <InternalsVisibleTo Include="$(AssemblyName).Integration.Tests" />
   </ItemGroup>
 </Project>
